--- a/src/_reset.scss
+++ b/src/_reset.scss
@@ -10,6 +10,10 @@
 html {
   box-sizing: border-box;
   font-size: px-to-percent(10px); /* 1 */
+
+  @include respond('small') {
+    font-size: px-to-percent(9px);
+  }
 }
 
 *,
