--- a/src/_typography.scss
+++ b/src/_typography.scss
@@ -6,7 +6,7 @@ html {
 
 body {
   color: $color-secondary;
-  font-family: 'Roboto', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+  font-family: 'Open Sans', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
   font-size: 1.6rem;
 	font-weight: 300;
   line-height: 1.6;
