--- a/src/_typography.scss
+++ b/src/_typography.scss
@@ -1,7 +1,7 @@
 html {
-  -webkit-font-smoothing: antialiased; //TODO: Co to daje?
-  -moz-osx-font-smoothing: grayscale; //TODO: Co to daje?
-  -webkit-text-size-adjust: 100%; //TODO: Co to daje?
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
 }
 
 body {
@@ -19,7 +19,7 @@ strong {
 }
 
 p {
-  margin-bottom: 2.5rem; //TODO: Na razie nie wiem dlaczego to tutaj jest!
+  margin-bottom: 2.5rem;
 }
 
 h1,
