--- a/src/_blockquote.scss
+++ b/src/_blockquote.scss
@@ -2,6 +2,7 @@ blockquote {
   border-left: 0.4rem solid $color-primary;
   padding: 1rem 2rem;
   background-color: $color-tertiary;
+  margin-bottom: 2rem;
 
   *:last-of-type {
     margin-bottom: 0;
