--- a/src/_code.scss
+++ b/src/_code.scss
@@ -1,6 +1,7 @@
 code {
   background-color: $color-tertiary;
-  padding: 0.2rem 0.5rem;
+  padding: 0.2rem 0.5rem 0.2rem 0.5rem;
+  font-size: 120%;
   border-radius: 0.4rem;
   margin: 0 0.2rem;
 }
@@ -10,6 +11,7 @@ pre {
   overflow-y: scroll;
   padding: 1rem;
   border-bottom: 0.4rem solid $color-primary;
+  margin-bottom: 2rem;
 
   & > code {
     padding: 0;
