--- a/src/_grid.scss
+++ b/src/_grid.scss
@@ -1,6 +1,10 @@
 .row {
   display: flex;
   flex-direction: row;
+
+  @include respond('medium') {
+    flex-direction: column;
+  }
 }
 
 .column {
@@ -11,3 +15,4 @@
     flex: 0 0 50%;
   }
 }
+
