--- a/src/_list.scss
+++ b/src/_list.scss
@@ -3,13 +3,13 @@ ol,
 ul {
 	list-style: none;
 	margin-top: 0;
-	padding-left: 0;
+  padding-left: 0;
+  margin-bottom: 2rem;
 
 	dl,
 	ol,
 	ul {
-		font-size: 90%;
-    margin: 1.5rem 0 1.5rem 3.0rem;
+    margin: 0 0 0 1.5rem;
   }
 }
 
@@ -23,4 +23,8 @@ ul {
 
 dd {
   -webkit-margin-start: 40px;
+}
+
+dt {
+  font-weight: bold;
 }
