--- a/src/_utility.scss
+++ b/src/_utility.scss
@@ -1,17 +1,11 @@
-// Utility
-// ––––––––––––––––––––––––––––––––––––––––––––––––––
-
-// Clear a float with .clearfix
 .clearfix {
   &:after {
     clear: both;
-    content: ' '; // The space content is one way to avoid an Opera bug.
+    content: ' ';
     display: table;
   }
 }
 
-
-// Float either direction
 .float-left {
   float: left;
 }
@@ -19,3 +13,8 @@
 .float-right {
   float: right;
 }
+
+.mb {
+  margin-bottom: 2rem;
+}
+
