--- a/src/lemon.scss
+++ b/src/lemon.scss
@@ -1,5 +1,5 @@
 /**
- * Lemon v0.0.1 (https://appalaszynski.github.io/lemon/))
+ * Lemon v1.0.0 (https://appalaszynski.github.io/lemon/))
  * Copyright (c) 2018 appalaszynski (https://github.com/appalaszynski)
  * Licensed under MIT (https://github.com/appalaszynski/lemon/blob/master/LICENSE)
  */
@@ -19,3 +19,4 @@
 @import 'link';
 @import 'forms';
 @import 'list';
+@import 'table';
